versioned_docs/version-4.0/indexes/sorting-and-collation.mdx
---
title: "Indexes: Sorting & Collation"
hide_table_of_contents: true
sidebar_label: Sorting & Collation
sidebar_position: 10
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


#  Indexes: Sorting & Collation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


Starting from version 4.0, RavenDB automatically determines sorting based on an indexed value. All values will have a capability to be sorted `lexicographically`. Numerical values will also be sortable by their `double` and `long` value.

## Date types

Dates are written to the index in a form which preserves lexicography order, and is readable by both human and machine (like so: `2011-04-04T11:28:46.0404749+03:00`). This requires no user intervention.

## Example

Please read our dedicated article describing `sorting` capabilities when queries are executed. It can be found [here](../indexes/querying/sorting.mdx).

## Collation

RavenDB supports using collations for documents sorting and indexing. You can setup a specific collation for an index field, so you can sort based of culture specific rules.

The following is an example of an index definition which allows sorting based on the Swedish lexical sorting rules:

<TabItem value="static_sorting2" label="static_sorting2">
<CodeBlock language="csharp">
{`public class Products_ByName : AbstractIndexCreationTask<Product>
\{
    public Products_ByName()
    \{
        Map = products => from product in products
                          select new
                          \{
                              product.Name
                          \};

        Analyzers.Add(x => x.Name, "Raven.Server.Documents.Indexes.Persistence.Lucene.Analyzers.Collation.Cultures.SvCollationAnalyzer, Raven.Server");
    \}
\}
`}
</CodeBlock>
</TabItem>

In general, you can sort using `Raven.Database.Indexing.Collation.Cultures.<two-letters-culture-name>CollationAnalyzer`, and _all_ the cultures supported by the .NET framework are supported.


</LanguageContent>
<LanguageContent language="java">


Starting from version 4.0, RavenDB automatically determines sorting based on an indexed value. All values will have a capability to be sorted `lexicographically`. Numerical values will also be sortable by their `double` and `long` value.

## Date types

Dates are written to the index in a form which preserves lexicography order, and is readable by both human and machine (like so: `2011-04-04T11:28:46.0404749+03:00`). This requires no user intervention.

## Example

Please read our dedicated article describing `sorting` capabilities when queries are executed. It can be found [here](../indexes/querying/sorting.mdx).

## Collation

RavenDB supports using collations for documents sorting and indexing. You can setup a specific collation for an index field, so you can sort based of culture specific rules.

The following is an example of an index definition which allows sorting based on the Swedish lexical sorting rules:

<TabItem value="static_sorting2" label="static_sorting2">
<CodeBlock language="java">
{`public static class Products_ByName extends AbstractIndexCreationTask \{
    public Products_ByName() \{
        map = "docs.Products.Select(product => new \{ " +
            "    Name = product.Name " +
            "\})";

        analyze("Name", "Raven.Server.Documents.Indexes.Persistence.Lucene.Analyzers.Collation.Cultures.SvCollationAnalyzer, Raven.Server");
    \}
\}
`}
</CodeBlock>
</TabItem>

In general, you can sort using `Raven.Database.Indexing.Collation.Cultures.<two-letters-culture-name>CollationAnalyzer`, and _all_ the cultures supported by the .NET framework are supported.


</LanguageContent>
<LanguageContent language="nodejs">


Starting from version 4.0, RavenDB automatically determines sorting based on an indexed value. All values will have a capability to be sorted `lexicographically`. Numerical values will also be sortable by their `double` and `long` value.

## Date types

Dates are written to the index in a form which preserves lexicographic order, and is readable by both human and machine (like so: `2011-04-04T11:28:46.0404749+03:00`). This requires no user intervention.

## Example

Please read our dedicated article describing `sorting` capabilities when queries are executed. It can be found [here](../indexes/querying/sorting.mdx).

## Collation

RavenDB supports using collations for documents sorting and indexing. You can setup a specific collation for an index field, so you can sort based of culture specific rules.

The following is an example of an index definition which allows sorting based on the Swedish lexical sorting rules:

<TabItem value="static_sorting2" label="static_sorting2">
<CodeBlock language="js">
{`class Products_ByName extends AbstractIndexCreationTask \{
    constructor() \{
        super();

        this.map = \`docs.Products.Select(product => new \{     
            Name = product.Name 
        \})\`;

        this.analyze("Name", 
            "Raven.Server.Documents.Indexes.Persistence.Lucene.Analyzers.Collation.Cultures.SvCollationAnalyzer, Raven.Server");
    \}
\}
`}
</CodeBlock>
</TabItem>

In general, you can sort using `Raven.Database.Indexing.Collation.Cultures.<two-letters-culture-name>CollationAnalyzer`, and _all_ the cultures supported by the .NET framework are supported.


</LanguageContent>

<!---
### Indexes
- [Map Indexes](../indexes/map-indexes)
- [What are Indexes](../indexes/what-are-indexes)

### Querying
- [Basics](../indexes/querying/basics)
- [Sorting](../indexes/querying/sorting)


-->